--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -16,6 +16,14 @@
     <%= form.text_field :name %>
   </div>
 
+  <br>
+  <input type="button" id="btnAddIngredient" value="Add Ingredient">
+  <%= render 'modal', form: form %>
+  <br>
+  <br>
+  <%= render 'ingredients', form: form %>
+  <br>
+
   <div class="field">
     <%= form.label :instructions %>
     <%= form.text_area :instructions %>
@@ -25,3 +33,90 @@
     <%= form.submit %>
   </div>
 <% end %>
+
+<style>
+  .modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
+
+  .modal-content {
+    background-color: #fefefe;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%; /* Could be more or less, depending on screen size */
+  }
+
+  .closeModal {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+
+  .closeModal:hover,
+  .closeModal:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
+</style>
+
+<script id="modalScript">
+  var modal = document.getElementById("ingredientModal");
+  var openModalBtn = document.getElementById("btnAddIngredient");
+  var modalSpan = document.getElementsByClassName("closeModal")[0];
+
+  openModalBtn.onclick = function() {
+    modal.style.display = "block";
+  }
+
+  modalSpan.onclick = function() {
+    modal.style.display = "none";
+  }
+
+  window.onclick = function(event) {
+    if (event.target == modal) {
+      modal.style.display = "none";
+    }
+  }
+</script>
+
+<script id="ingredientsScript">
+  // check which ingredients are already on the recipe and disable the appropriate "add" buttons
+  for (element of document.getElementById("ingredientTableBody").children) {
+    var name = element.getAttribute("name").slice(11);
+    setBtnDisabled (name, true);
+  }
+
+  function addIngredient(el, name) {
+    if (document.getElementsByName(`ingredient_${name}`).length == 0) {
+      var table = document.getElementById("ingredientTableBody");
+      var html = `<tr name='ingredient_${name}'>`
+                  + `<td><input type='button' onclick='removeIngredient(this, "${name}")' value='remove'></td>`
+                  + `<td><label for='recipe_${name}'>${name}</label></td>`
+                  + `<td><input value='' name='ingredientsJoin[${name}]' type='text'></td>`
+               + "</tr>";
+      table.insertAdjacentHTML('beforeend', html);
+      el.disabled = true;
+    }
+  }
+
+  function removeIngredient(el, name) {
+    el.parentNode.parentNode.remove();
+    setBtnDisabled (name, false);
+  }
+
+  function setBtnDisabled (name, disabled) {
+    document.getElementsByName(`add_${name}`)[0].disabled = disabled;
+  }
+</script>
