--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,4 @@
 <h1>Welcome to the Recipes App!</h1>
-<%= link_to 'Ingredients List', ingredients_path %>
+<%= link_to 'Recipe List', recipes_path %>
+<br>
+<%= link_to 'Ingredient List', ingredients_path %>
