--- a/app/views/ingredients/index.html.erb
+++ b/app/views/ingredients/index.html.erb
@@ -2,7 +2,7 @@
 
 <h1>Ingredients</h1>
 
-<table>
+<table class="table table-striped table-hover">
   <thead>
     <tr>
       <th>Name</th>
@@ -13,9 +13,9 @@
   <tbody>
     <% @ingredients.each do |ingredient| %>
       <tr>
-        <td><%= link_to ingredient.name, ingredient %></td>
-        <td><%= link_to 'Edit', edit_ingredient_path(ingredient) %></td>
-        <td><%= link_to 'Destroy', ingredient, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to ingredient.name, ingredient, class: "btn-link" %></td>
+        <td><%= link_to 'Edit', edit_ingredient_path(ingredient), class: "btn-link" %></td>
+        <td><%= link_to 'Destroy', ingredient, class: "btn-link", method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -23,4 +23,4 @@
 
 <br>
 
-<%= link_to 'New Ingredient', new_ingredient_path %>
+<%= link_to 'New Ingredient', new_ingredient_path, class: "btn-link" %>
