--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_with(model: recipe) do |form| %>
   <% if recipe.errors.any? %>
-    <div id="error_explanation">
+    <div id="error_explanation" class="alert alert-danger">
       <h2><%= pluralize(recipe.errors.count, "error") %> prohibited this recipe from being saved:</h2>
 
       <ul>
@@ -12,64 +12,28 @@
   <% end %>
 
   <div class="field">
-    <%= form.label :name %>
-    <%= form.text_field :name %>
+    <%= form.label :name, class: "form-label" %>
+    <%= form.text_field :name, class: "form-control" %>
   </div>
 
   <br>
-  <input type="button" id="btnAddIngredient" value="Add Ingredient">
+  <input type="button" id="btnAddIngredient" class="btn btn-default" value="Add Ingredient">
   <%= render 'modal', form: form %>
   <br>
   <br>
+  <%= form.label "Ingredients", class: "form-label" %>
   <%= render 'ingredients', form: form %>
   <br>
 
   <div class="field">
-    <%= form.label :instructions %>
-    <%= form.text_area :instructions %>
+    <%= form.label :instructions, class: "form-label" %>
+    <%= form.text_area :instructions, class: "form-control" %>
   </div>
 
   <div class="actions">
-    <%= form.submit %>
+    <%= form.submit class: "btn btn-primary" %>
   </div>
 <% end %>
-
-<style>
-  .modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-  }
-
-  .modal-content {
-    background-color: #fefefe;
-    margin: 15% auto; /* 15% from the top and centered */
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%; /* Could be more or less, depending on screen size */
-  }
-
-  .closeModal {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-  }
-
-  .closeModal:hover,
-  .closeModal:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
-  }
-</style>
 
 <script id="modalScript">
   var modal = document.getElementById("ingredientModal");
