--- a/app/views/recipes/_ingredients.html.erb
+++ b/app/views/recipes/_ingredients.html.erb
@@ -1,11 +1,12 @@
-<table>
+<table class="table table-striped table-hover">
   <tbody id="ingredientTableBody">
     <% if !!@ingredientsJoin %>
       <% @ingredientsJoin.each do |ingredient| %>
         <tr name="ingredient_<%= ingredient.ingredient_name %>">
-          <td><input type="button" onclick="removeIngredient(this, '<%= ingredient.ingredient_name %>')" value="remove"></td>
-          <td><%= form.label ingredient.ingredient_name %></td>
-          <td><%= form.text_field ingredient.amount, 
+          <td><input type="button" class="btn btn-danger" onclick="removeIngredient(this, '<%= ingredient.ingredient_name %>')" value="remove"></td>
+          <td><%= form.label ingredient.ingredient_name, class: "form-label" %></td>
+          <td><%= form.text_field ingredient.amount,
+                  class: "form-control", 
                   value: ingredient.amount, 
                   name: "ingredientsJoin[#{ingredient.ingredient_name}]" %></td>
         </tr>
