--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -1,23 +1,9 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Name:</strong>
-  <%= @recipe.name %>
-</p>
+<h1><%= @recipe.name %></h1>
 
-<p>
-  <strong>Instructions:</strong>
-  <%= @recipe.instructions %>
-</p>
-
-<table>
-  <thead>
-    <tr>
-      <th>Ingredients</th>
-      <th colspan="1"></th>
-    </tr>
-  </thead>
-
+<h3>Ingredients:</h3>
+<table class="table table-striped table-hover">
   <tbody>
     <% @recipe.ingredientsJoin.each do |join| %>
       <tr>
@@ -27,5 +13,11 @@
   </tbody>
 </table>
 
-<%= link_to 'Edit', edit_recipe_path(@recipe) %> |
-<%= link_to 'Back', recipes_path %>
+<h3>Instructions:</h3>
+<div class="panel panel-default">
+  <div id="recipe-instructions-show" class="panel-body"><%= @recipe.instructions %></div>
+</div>
+
+
+<%= link_to 'Edit', edit_recipe_path(@recipe), class: "btn-link" %> |
+<%= link_to 'Back', recipes_path, class: "btn-link" %>
