--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,4 @@
 <h1>Welcome to the Recipes App!</h1>
-<%= link_to 'Recipe List', recipes_path %>
+<%= link_to 'Recipe List', recipes_path, class: "btn-link" %>
 <br>
-<%= link_to 'Ingredient List', ingredients_path %>
+<%= link_to 'Ingredient List', ingredients_path, class: "btn-link" %>
