--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -6,6 +6,11 @@ body {
   padding-top: 30px;
 }
 
+.disabled {
+  cursor: default !important;
+}
+
+// Header
 #logo {
   float: left;
   margin-right: 10px;
@@ -18,6 +23,23 @@ body {
   &:hover {
     color: white;
     text-decoration: none;
+  }
+}
+
+// Home
+.home-flex {
+  margin-top: 50px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+
+  input {
+    width: 300px;
+    min-width: 200px;
+    height: 200px;
+    text-align: center;
+    font-size: 30px;
+    margin: 30px;
   }
 }
 
@@ -48,13 +70,13 @@ body {
   float: right;
   font-size: 28px;
   font-weight: bold;
-}
 
-.closeModal:hover,
-.closeModal:focus {
-  color: black;
-  text-decoration: none;
-  cursor: pointer;
+  &:hover,
+  &:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+  }
 }
 
 // New/Edit Recipe Form
