--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -3,15 +3,11 @@
 <h1><%= @recipe.name %></h1>
 
 <h3>Ingredients:</h3>
-<table class="table table-striped table-hover">
-  <tbody>
-    <% @recipe.ingredientsJoin.each do |join| %>
-      <tr>
-        <td><%= join.ingredient_name %><% if !join.amount.blank? %> (<%= join.amount %>)<% end %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<ul>
+  <% @recipe.ingredientsJoin.each do |join| %>
+    <li><%= join.ingredient_name %><% if !join.amount.blank? %> (<%= join.amount %>)<% end %></li>
+  <% end %>
+</ul>
 
 <h3>Instructions:</h3>
 <div class="panel panel-default">
