--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,3 +38,7 @@
     <div class="container"><%= yield %></div>
   </body>
 </html>
+
+<script>
+  $('[data-toggle="tooltip"]').tooltip()
+</script>
