Database now resets every 24 hours

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -2,6 +2,7 @@
 <p>
   This demo app is in early beta so it does not have all of the planned functionality but please feel free to play around with it.
 </p>
+<p class="danger">WARNING: This demo's database is reset every 24 hours! This means that any changes you make will be wiped.</p>
 <div class="home-flex">
   <input type="button" class="btn btn-primary" value="Recipes" onclick="document.location='<%= recipes_path %>'">
   <input type="button" class="btn btn-primary" value="Ingredients" onclick="document.location='<%= ingredients_path %>'">
